--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+/*    background: linear-gradient(to left, rgba(7,27,82,1) 0%, rgba(0,128,128,1)100%); 
+*/
+background-image: url('./containers/Jiraiya-Sama.jpg');
+background-size: cover;
+background-repeat: no-repeat;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.coolor{
+	background: linear-gradient(to right,rgba(57, 44, 69), rgba(57, 44, 69));
+	color: white;
+}
+/*bg-light-green*/
+/*rgb(255, 132, 0)*/
+/*rgb(255, 217, 0)*/
